--- a/documentation/advanced.html
+++ b/documentation/advanced.html
@@ -18,7 +18,7 @@ documentation_selected: selected
     <p>We're going to start by making a carousel. Carousels are very prominent in the web today&#8202;&mdash;&#8202;they allow the user to swipe through a number of images&#8202;&mdash;&#8202;or use buttons if necessary.</p>
     <p>Below is the carousel we are going to implement through this tutorial. Some prominent features are the autoscroll feature that advances images, the "dot" indicators showing the index of the image, and the "Previous" and "Next" buttons for navigating through the images.</p>
     <div class="widget col-6">
-      <div data-ur-set="carousel" data-ur-id="first-carousel" data-ur-autoscroll="enabled">
+      <div class="section" data-ur-set="carousel" data-ur-id="first-carousel" data-ur-autoscroll="enabled">
         <div data-ur-carousel-component="dots"></div>
         <div data-ur-carousel-component="scroll_container">
           <img data-ur-carousel-component="item" src="http://placekitten.com/g/100/100" alt="1">
@@ -31,9 +31,9 @@ documentation_selected: selected
           <img data-ur-carousel-component="item" src="http://placekitten.com/g/100/100" alt="8">
         </div>
       </div>
-      <div class="btngroup text-center">
-        <div class="btn" data-ur-carousel-component="button" data-ur-carousel-button-type="prev" data-ur-id="first-carousel">Prev</div>
-        <div class="btn" data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-id="first-carousel">Next</div>
+      <div class="section btngroup text-center">
+        <div class="btn m-btn m-small" data-ur-carousel-component="button" data-ur-carousel-button-type="prev" data-ur-id="first-carousel">Prev</div>
+        <div class="btn m-btn m-small" data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-id="first-carousel">Next</div>
       </div>
     </div><!--end of carousel example-->
     <p>
