--- a/interactions/drawer.html
+++ b/interactions/drawer.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html>
 <head>
-  <meta charset="us-ascii">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <style>
   [data-ur-toggler-component="content"]:not([data-ur-state="enabled"]) {
