--- a/interactions/geocode/text_inputs.html
+++ b/interactions/geocode/text_inputs.html
@@ -1,55 +1,48 @@
 ---
-layout: geocode-interaction-sub
-title: Geocode Text Inputs
+layout: interactions
+title: Geolocation with Text Inputs
 name: geocode_text_inputs
 interaction_selected: selected
 ---
-<div class="wrapper">
-  <h1> Geolocation with Text Inputs </h1>
-  
-  <h2>Description</h2>
-  
-    <p>
-      This example illustrates that a select form is not necessary to fill a field. We've used a text input instead
-      of a select for the state and country.
-    </p>
+<h2>Description</h2>
+<p>
+  This example illustrates that a select form is not necessary to fill a field. We've used a text input instead of a select for the state and country.
+</p>
 
-  <h2>Demonstration</h2>
-  <p>The demonstration activates on button click.</p>
-  <div id="geocode_demonstration" data-ur-set="tabs" class="ur_ex">
-    <h3 data-ur-tabs-component="button" data-ur-tab-id="interaction" data-ur-state="enabled"> Example</h3>
-    <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
-
-    <div id="geocode_widget" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
-        <form data-ur-set="reverse-geocode" action="geocode_submit" method="get" accept-charset="utf-8" >
-          <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
-          <br/>
-          <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
-          <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
-          <input type="text" name="zip" value="" id="zip" placeholder="zip" data-ur-reverse-geocode-component="rg-zip">
-          <!-- State works with both inputs and select elements -->
-          <input type="text" name="state" value="" id="state" placeholder="state" data-ur-reverse-geocode-component="rg-state">
-          <!-- Country works with both inputs and select elements -->
-          <input type="text" name="country" value="" id="country" placeholder="country" data-ur-reverse-geocode-component="rg-country">
-        </form>
+<h2>Demonstration</h2>
+<p>The demonstration activates on button click.</p>
+<div class="d-row d-gutters">
+  <div class="d-col-6">
+    <h3>Example</h3>
+    <div class="subpane">
+      <form data-ur-set="reverse-geocode">
+        <a class="btn" href="javascript:void(0)" data-ur-reverse-geocode-component="rg-button">Click here to find your location</a>
+        <input type="text" placeholder="Street Address" data-ur-reverse-geocode-component="rg-street">
+        <input type="text" placeholder="City" data-ur-reverse-geocode-component="rg-city">
+        <input type="text" placeholder="Zip" data-ur-reverse-geocode-component="rg-zip">
+        <input type="text" placeholder="State" data-ur-reverse-geocode-component="rg-state">
+        <input type="text" placeholder="Country" data-ur-reverse-geocode-component="rg-country">
+      </form>
     </div>
-
-    <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html">
-{% highlight html %}
-
-<form data-ur-set="reverse-geocode" action="geocode_submit" method="get" accept-charset="utf-8" >
-  <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
-  <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
-  <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
-  <input type="text" name="zip" value="" id="zip" placeholder="zip" data-ur-reverse-geocode-component="rg-zip">
-  <!-- State works with both inputs and select elements -->
-  <input type="text" name="state" value="" id="state" placeholder="state" data-ur-reverse-geocode-component="rg-state">
-  <!-- Country works with both inputs and select elements -->
-  <input type="text" name="country" value="" id="country" placeholder="country" data-ur-reverse-geocode-component="rg-country">
-</form>
-{% endhighlight %}
-    </div>
-    <hr />
   </div>
-  
-</div> <!-- wrapper -->
+  <div class="d-col-6">
+    <h3>The Code</h3>
+    {% capture tmp %}
+    <form data-ur-set="reverse-geocode">
+      <a data-ur-reverse-geocode-component="rg-button">Click here to find your location</a>
+      <input type="text" data-ur-reverse-geocode-component="rg-street">
+      <input type="text" data-ur-reverse-geocode-component="rg-city">
+      <input type="text" data-ur-reverse-geocode-component="rg-zip">
+      <input type="text" data-ur-reverse-geocode-component="rg-state">
+      <input type="text" data-ur-reverse-geocode-component="rg-country">
+    </form>
+    {% endcapture %}
+    <pre data-lang="html">{{ tmp | xml_escape }}</pre>
+  </div>
+</div>
+
+<hr>
+
+<p>
+  <a href="{{site.baseurl}}interactions/geocode.html" class="icon-chevron-left">Back to Geolocation Widget</a>
+</p>
